# shipyard-agent

./: .env.example  .gitignore  AI_COST_ANALYSIS.md  AI_DEVELOPMENT_LOG.md  CODEAGENT.md  FINAL_PRD.md  MVP_PRD.md  PRESEARCH.md  README.md  _generate_prd_pdf.py  comparative_analysis.md  pyproject.toml  run_kanban_standups.py  run_tasks.py  run_tech_debt.py
.shipyard/memory/: mem_20260327_025450_d0bbc2.json
ship/: .dockerignore  .env.example  Dockerfile  Dockerfile.api  Dockerfile.web  docker-compose.yml  package.json  pnpm-lock.yaml  railway.toml
ship/api/: package.json  pnpm-lock.yaml
ship/shared/: package.json
ship/web/: ADMIN_DASHBOARD_IMPLEMENTATION.md  ARCHIVED_PERSONS_CONTEXT_SUMMARY.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/shipyard/: __init__.py  (+12 more)
test_workspace/: api_spec.md  greet.py  routes.ts
tests/: conftest.py  test_agent.py  test_evals.py  test_memory.py  test_models.py  test_repl.py  test_rules.py  test_state.py  test_supervisor.py  test_tools.py  test_tracing.py  test_worker.py  test_worker_prompts.py
traces/: kanban_standup_task_1_result.md  kanban_standup_task_2_result.md  kanban_standup_task_3_result.md  kanban_standup_task_4_result.md  kanban_standup_task_5_result.md  kanban_standup_task_6_result.md  kanban_standup_task_7_result.md  task_10_result.md  task_1_result.md  task_2_result.md  task_3_result.md  task_4_result.md  task_5_result.md  task_6_result.md  task_7_result.md  task_8_result.md  task_9_result.md  tech_debt_task_1_result.md  tech_debt_task_2_result.md  tech_debt_task_3_result.md
(+136 files in other folders)
